force-app/main/default/objects/SVMXC__SPM_Utilization__c/SVMXC__SPM_Utilization__c.object-meta.xml
<CustomObject>
    <description>This object holds the technician&apos;s utlization on a daily basis</description>
    <label>SPM - Utilization</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM - Utilizations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>