force-app/main/default/objects/SVMXC__SPM_Utilization__c/fields/SVMXC__Available_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Available_Time__c</fullName>
    <description>Holds the difference of minutes between working-minutes and break-minutes</description>
    <formula>SVMXC__Working_Minutes__c  -  (SVMXC__Break_Minutes__c +  SVMXC__Off_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Time (In Mins)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>