force-app/main/default/objects/SVMXC__SPM_Utilization__c/fields/SVMXC__Country__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>