force-app/main/default/objects/SVMXC__SPM_Utilization__c/fields/SVMXC__Off_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Off_Time__c</fullName>
    <description>Holds the Sick Leave/PTO values logged by the technician</description>
    <label>Off Time (In Mins)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>