force-app/main/default/objects/SVMXC__SPM_Utilization__c/fields/SVMXC__Utilization_Without_Drive_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Utilization_Without_Drive_Time__c</fullName>
    <description>Computes the productive Utilization Time without Drive-Time using the Productive-Time, Available-Time</description>
    <formula>IF(SVMXC__Available_Time__c &gt; 0, ((SVMXC__Productive_Time__c / SVMXC__Available_Time__c ) * 100), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilization % (Without Drive Time)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>